Refactor: front의 userModel기반 전면수정

--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,26 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Created by https://www.toptal.com/developers/gitignore/api/react
+# Edit at https://www.toptal.com/developers/gitignore?templates=react
+
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
+
+# End of https://www.toptal.com/developers/gitignore/api/react
 # End of https://www.toptal.com/developers/gitignore/api/windows,node,visualstudiocode
 
 /node_modules
@@ -171,3 +191,4 @@ $RECYCLE.BIN/
 .env
 /uploads
 /.DS_Store
+jwt.js
