--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "frontend": "npm run start --prefix client",
-    "backend": "nodemon --exec babel-node test_server/server.js",
+    "backend": "nodemon --exec babel-node server/index.js",
     "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,20 +24,21 @@
   },
   "homepage": "https://github.com/DIBIDIP/ARMenu-Unity-ARContent#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.0.2",
+    "node-fetch": "^2.6.1",
     "react-redux": "^5.0.7",
     "saslprep": "^1.0.3",
-    "supports-color": "^7.1.0",
-    "bcrypt": "^5.0.1",
-    "dotenv": "^10.0.0",
-    "node-fetch": "^2.6.1"
+    "supports-color": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
