--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
-  "name": "server",
+  "name": "react-boiler-plate",
   "version": "1.0.0",
-  "description": "AR-DISH project's BACKEND_FILE",
+  "description": "react boiler plate",
   "main": "index.js",
   "engine": {
     "node": "10.16.0",
     "npm": "6.9.0"
   },
   "scripts": {
+    "start": "node server/index.js",
+    "backend": "nodemon server/index.js",
     "frontend": "npm run start --prefix client",
-    "backend": "nodemon --exec babel-node server/index.js",
-    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DIBIDIP/ARMenu-Unity-ARContent.git"
-  },
-  "author": "",
+  "author": "John ahn",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DIBIDIP/ARMenu-Unity-ARContent/issues"
-  },
-  "homepage": "https://github.com/DIBIDIP/ARMenu-Unity-ARContent#readme",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -32,10 +25,12 @@
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.0.2",
     "node-fetch": "^2.6.1",
+    "os": "^0.1.2",
     "react-redux": "^5.0.7",
     "saslprep": "^1.0.3",
     "supports-color": "^7.1.0"
@@ -44,6 +39,7 @@
     "@babel/core": "^7.15.0",
     "@babel/node": "^7.14.9",
     "@babel/preset-env": "^7.15.0",
+    "babel": "^6.23.0",
     "concurrently": "^6.2.1",
     "nodemon": "^2.0.12"
   }
